--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: My GitHub space for professional info
-subtitle: Get to know me and what I've done
+title: Postdoctoral researcher. Currently @MIT and @MGH
+subtitle: Electrophysiological signatures of Anesthesia 
 ---
 
